Fixes alignment of items on Context submenu
The icon images on the Context submenu we're pushing the
items too far to the right. Adjusted the scss to move them
back to the left. Looks good for now.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,15 +83,17 @@ $accordion-separator: #41444a;
     }
     i.context-icon { 
       vertical-align: top;
+      display: inline;
+      margin: 0 .25rem 0 -1rem;
     }
 
   }
 }
 
 // padding for each list item
-.menu > li:not(.menu-text) > a {
-  padding: 1.2rem 1rem;
-}
+//  .menu > li:not(.menu-text) > a {
+//  padding: 1.2rem 1rem;
+// }
 
 // logout button
 
